--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@vitejs/plugin-react-swc": "^3.7.1",
+    "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "nanoid": "^5.0.8",
     "react": "^18.3.1",
