--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.5",
+    "@mui/material": "^6.1.7",
+    "@reduxjs/toolkit": "^2.3.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
+    "grid": "^4.10.8",
     "nanoid": "^5.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -32,6 +36,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.11"
   }
 }
